--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,40 +15,49 @@
     tools:context=".MainActivity">
 
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:id="@+id/layoutArriba"
         android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="28dp"
         android:background="@color/white"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/Linea1"
         app:layout_constraintEnd_toEndOf="@+id/Linea1"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints">
 
         <TextView
-
-            android:id="@+id/resultadoAnterior"
-            android:layout_width="306dp"
+            android:id="@+id/numeroUno"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="textEnd"
-            android:layout_marginLeft="20dp"
-            android:textSize="34dp" />
+            android:text="0"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
+            android:id="@+id/operador"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="x"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/numeroUno" />
 
-            android:id="@+id/resultado"
-            android:layout_width="306dp"
-            android:layout_height="match_parent"
-            android:paddingTop="200dp"
-            android:layout_marginLeft="20dp"
-            android:textSize="34dp"
-            android:textAlignment="textEnd"
-            />
+        <TextView
+            android:id="@+id/numeroDos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="34sp"
 
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/operador" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/Linea1"
